# aoc2024

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
src/1/: main.rs
src/2/: main.rs
src/3/: main.rs
src/4/: main.rs
src/5/: main.rs
src/6/: main.rs
src/7/: main.rs
src/8/: main.rs
src/9/: main.rs
