[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
array2d = "0.3.2"
regex = "1.11.1"

[lib]

[targets]
[[bin]]
name = "day1"
path = "src/1/main.rs"

[[bin]]
name = "day2"
path = "src/2/main.rs"

[[bin]]
name = "day3"
path = "src/3/main.rs"

[[bin]]
name = "day4"
path = "src/4/main.rs"

[[bin]]
name = "day5"
path = "src/5/main.rs"

[[bin]]
name = "day6"
path = "src/6/main.rs"

[[bin]]
name = "day7"
path = "src/7/main.rs"

[[bin]]
name = "day8"
path = "src/8/main.rs"

[[bin]]
name = "day9"
path = "src/9/main.rs"
